tests/baselines/reference/typeCheckTypeArgument(strict=true).errors.txt
typeCheckTypeArgument.ts(1,19): error TS2304: Cannot find name 'UNKNOWN'.
typeCheckTypeArgument.ts(3,26): error TS2304: Cannot find name 'UNKNOWN'.
typeCheckTypeArgument.ts(5,21): error TS2304: Cannot find name 'UNKNOWN'.
typeCheckTypeArgument.ts(7,24): error TS2304: Cannot find name 'UNKNOWN'.
typeCheckTypeArgument.ts(10,22): error TS2304: Cannot find name 'UNKNOWN'.
typeCheckTypeArgument.ts(13,13): error TS2304: Cannot find name 'UNKNOWN'.
typeCheckTypeArgument.ts(13,22): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== typeCheckTypeArgument.ts (7 errors) ====
    var f: <T extends UNKNOWN>() => void;
                      ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    interface IFoo<T extends UNKNOWN> { }
                             ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    class Foo<T extends UNKNOWN> { }
                        ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    function bar<T extends UNKNOWN>() { }
                           ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    class Foo2 {
        method<T extends UNKNOWN>() { }
                         ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    }
    
    (<T extends UNKNOWN>(a) => { });
                ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
                         ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.